--- a/Desktop/veterinariaconstanza/web/css/style-desktop.css
+++ b/Desktop/veterinariaconstanza/web/css/style-desktop.css
@@ -214,7 +214,7 @@
 
 	#footer
 	{
-            background-color: red;
+            background-color: blue;
 	}
 
 /*********************************************************************************/
