--- a/Desktop/veterinariaconstanza/web/css/style.css
+++ b/Desktop/veterinariaconstanza/web/css/style.css
@@ -34,7 +34,7 @@
 	body,input,select,textarea
 	{
 		font-family: 'Open Sans', sans-serif;
-		color: #7b818c;
+		color: #7b8ddd;
 		font-weight: 400;
 	}
 
