--- a/Desktop/veterinariaconstanza/web/css/formulariocss.css
+++ b/Desktop/veterinariaconstanza/web/css/formulariocss.css
@@ -8,31 +8,47 @@ and open the template in the editor.
     Author     : victor
 */
 
-      input{
-                border-radius:10px;
-                box-shadow:0px 0px 25px rgba(30,144,255,0.3) inset;
-                width: 200px;
-                height: 30px;
-                padding: 5px;
-                margin: 5px;
+input{
+    border-radius:10px;
+    box-shadow:0px 0px 25px rgba(30,144,255,0.3) inset;
+    width: 200px;
+    height: 30px;
+    padding: 2px;
+    margin: 2px;    
+}
 
-            }
-            #contenedor{
-                width: 850px;
-                border: 1px solid rgba(255,255,255,0.4);
-                padding: 20px;
-                margin: 50px;
-                border-radius: 25px 25px 25px 25px;
-                box-shadow:0px 10px 25px #0066cc;
-                border-color: #ffffff;
-                
 
-            }
-            td{
-                text-align: right;
-                font-size: 25px italic;
-                color: white;
-            }
-            h3{
-              color: white;  
-            }
+
+#contenedor{
+    width:auto;
+    float: none;
+    border: 1px solid rgba(255,255,255,0.4);
+    padding: 20px;
+    margin: 20px;
+    border-radius: 25px 25px 25px 25px;
+    box-shadow:0px 10px 25px #0066cc;
+    border-color: #ffffff;             
+
+}
+tabla{
+    width:100%;
+}
+
+@media screen and (max-width:920px){
+    table, thead, tr, th, tbody, td{
+        display:block;
+    }
+
+   
+
+    td { 
+      color: white;
+      float: right;
+      color: white;
+    }
+
+    h3{
+
+        text-align: center;
+        color: red;  
+    }
