--- a/Desktop/veterinariaconstanza/web/css/style-desktop.css
+++ b/Desktop/veterinariaconstanza/web/css/style-desktop.css
@@ -85,7 +85,7 @@
 			top: 50%;
 			margin-top: -0.65em;
 			font-size: 1.5em;
-			color: #fff;
+			color: #009933;
 		}
 
 /*********************************************************************************/
@@ -109,7 +109,7 @@
 			#nav > ul > li > a,
 			#nav > ul > li > span
 			{
-				color: #fff;
+				color: #008000;
 				text-decoration: none;
 				text-transform: uppercase;
 				font-weight: 800;
@@ -168,7 +168,7 @@
 		.dropotron a,
 		.dropotron span
 		{
-			color: #aaa;
+			color: #FFFFFF;
 			text-decoration: none;
 			text-transform: uppercase;
 			font-weight: 800;
@@ -203,7 +203,7 @@
 		{
 			float: left;
 			text-align: right;
-			width: 60%;
+			width: 40%;
 			line-height: 1.5em;
 			margin: 0;
 		}
@@ -214,7 +214,7 @@
 
 	#footer
 	{
-            background-color: blue;
+            background-color: #FFFFFF;
 	}
 
 /*********************************************************************************/
