--- a/Desktop/veterinariaconstanza/web/css/formulariocss.css
+++ b/Desktop/veterinariaconstanza/web/css/formulariocss.css
@@ -7,8 +7,11 @@ and open the template in the editor.
     Created on : 28-mar-2015, 2:59:30
     Author     : victor
 */
+div { margin: 20px; }
+
 
 input{
+    float: left;
     border-radius:10px;
     box-shadow:0px 0px 25px rgba(30,144,255,0.3) inset;
     width: 200px;
@@ -17,6 +20,27 @@ input{
     margin: 2px;    
 }
 
+select#combos {
+   color: #fff;
+   width: 200px;
+   height: 40px;
+   background-color: #779126;
+   -webkit-border-radius: 20px;
+   -moz-border-radius: 20px;
+   border-radius: 20px;
+   padding-left: 15px;
+}
+#combos {
+   color: #fff;
+   width: 400px;
+   height: 45px;
+   background-color: #779126;
+   -webkit-border-radius: 20px;
+   -moz-border-radius: 20px;
+   border-radius: 20px;
+   padding-left: 15px;
+}
+​
 
 
 #contenedor{
