--- a/Desktop/veterinariaconstanza/web/css/logincss.css
+++ b/Desktop/veterinariaconstanza/web/css/logincss.css
@@ -9,7 +9,7 @@ and open the template in the editor.
 */
 
 body {
-    background: #222;
+    background: bottom;
     font: 12px/1.7em arial, sans-serif;
     margin: 75px;
 }
